# PAD-assignments

./: .gitignore
assignment01/: Assignment01.sln
assignment01/Assignment01/: Assignment01.fsproj  Assignment01.sln  Intcomp1.fs  Intro2.fs
assignment01/Assignment01/Assignment01CSharp/: Add.cs  CstI.cs  Expr.cs  Mul.cs  Program.cs  Sub.cs  Var.cs
assignment01/Assignment01CSharp/: Add.cs  Binop.cs  Sub.cs  Var.cs
assignment02/Assignment02/: Assignment02.sln
assignment02/Assignment02/Assignment02/: Assignment02.fsproj  Intcomp1.fs  Program.fs
assignment02/exercises/: helloLex.md
assignment03/: exercises.md
assignment03/Assignment03/: Assignment03.sln
assignment03/Assignment03/Assignment03/: Assignment03.fsproj  Intcomp1.fs
assignment04/Assignment04/: Assignment04.sln
assignment04/Assignment04/Assignment04/: Assignment04.fsproj  Program.fs
assignment05/Assignment05/: Assignment05.sln
assignment05/Assignment05/Assignment05/: Assignment05.fsproj  Program.fs  TypedFun.fs  (+1 more)
assignment06/Assignment06/: Assignment06.sln
assignment07/Assignment07/: Assignment07.sln
assignment08/Assignment08/: Assignment08.sln
assignment09/: CMakeLists.txt
assignment09/Assignment09/: Assignment09.sln
assignment09/Assignment09/Assignment09/: Answers.md  Assignment09.fsproj
assignment09/Assignment09/Assignment09/ListC/: Answers.md
assignment09/Assignment09/Assignment09/ListC/ListVM/ListVM/: listmachine  listmachine.c
assignment10/Assignment10/: Assignment10.sln
assignment11/Assignment11/: Assignment11.sln
assignment12/Assignment12/: Assignment12.sln
(+98 files in other folders)
